--- a/app/views/tasks/create.js.erb
+++ b/app/views/tasks/create.js.erb
@@ -6,3 +6,6 @@
 <% else %>
   $('.new-task').html("<%= escape_javascript(render partial: 'tasks/form', locals: { list: @list, task: @task }) %> ");
 <% end %>
+
+
+$(".delete-box:last").click(animatedDelete);  
