--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,43 +14,125 @@
  *= require_self
  */
 
- body {
+body {
   font-family: 'Open Sans', sans-serif;
-  font-weight: 300;
+  margin-left:50px;
+  color:#454444;
 }
 
 .home {
-  background-color: #4bd7ff;
+  background-image: url('/assets/tickitoff.png');
 }
 
-.home h1 {
+h1.home-head {
   color: white;
-  text-align: center;
+  font-family: Lobster;
+  font-size:90px;
 }
 
-/*form {
-  margin-left:50px;
+.home-links > a {
+  color:white;
 }
-*/
+
+.home-button {
+  font-size:20px;
+  position:relative;
+  padding:10px 15px;
+  border:1px solid #ff6a32;
+  background-color:#ff6a32;
+  color:#fafafa;
+  margin-right:10px;
+}
+
+p.home-text {
+  color:white;
+  font-size:20px;
+  margin-top:-50px;
+  margin-bottom: 30px;
+}
+
+.home-links {
+  color:white;
+  margin-left:7px;
+}
+
+p {
+  font-weight: 300;
+}
+
+input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0 1000px white inset;
+}
+
+.form-font {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.reg-form-field {
+  -webkit-box-shadow: rgba(255, 255, 255, 0.0470588) 0px 0px 0px 1px, rgba(0, 0, 0, 0.0980392) 0px 20px 20px -20px inset;
+  width:300px;
+  height:40px;
+  font-size:15px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+  padding:0px 10px;
+  background:white;
+  border:1px solid #dfdfdf;
+  border-radius:3px;
+  margin-top:5px;
+}
+
+.reg-button {
+  position:relative;
+  padding:6px 15px;
+  border:1px solid #00c7ff;
+  background-color:#00c7ff;
+  color:#fafafa;
+  font-size:12px;
+}
+.reg-button:hover  {
+  background-color:#4bd7ff;
+  color:#fafafa;
+}
+
+.cancel-button {
+  position:relative;
+  padding:6px 15px;
+  border:1px solid #ff6a32;
+  background-color:#ff6a32;
+  color:#fafafa;
+  font-size:12px;
+}
+
+.cancel-button:hover  {
+  background-color:#ff895e;
+  color:#fafafa;
+}
+
 
 .form-field {
+  margin-top: 5px;
+  height:30px;
+  font-size:12px;
   width:208px;
-  padding:8px 15px;
-  background:rgba(50, 50, 50, 0.2);
-  border:0px solid #dbdbdb;
+  padding:3px 12px;
+  background:#dfdfdf;
+  border:0px solid #dfdfdf;
 }
 
 .button {
   position:relative;
+  height:36px;
   padding:6px 15px;
-  left:-4px;
-  border:2px solid #207cca;
-  background-color:#207cca;
+  left:-10px;
+  border:1px solid #00c7ff;
+  background-color:#00c7ff;
   color:#fafafa;
+  font-size:12px;
 }
 .button:hover  {
-  background-color:#fafafa;
-  color:#207cca;
+  background-color:#4bd7ff;
+  color:#fafafa;
 }
 
 input, textarea, select, a { 
@@ -59,6 +141,18 @@ input, textarea, select, a {
 
 .user-info {
   float:right;
+  text-align: right;
+  margin-right:15px;
+  font-weight: 300;
+}
+
+.home-user > .user-info > a {
+  color:white;
+}
+
+
+.home-user {
+  color:#454444;
 }
 
 .alert {
@@ -68,21 +162,26 @@ input, textarea, select, a {
   padding:10px;
   color:#FFFFFF;
   text-align:center;
+  font-weight: 300;
 }
 
 .alert-notice {
-  border: 1px solid #1dcdff;
+  border: 1px solid #00c7ff;
   background-color:#4bd7ff;
 }
 
 .alert-error {
-  border:1px solid #f78634;
-  background:#ff984c;
+  border:1px solid #ff6a32;
+  background:#ff895e;
 }
 
 .alert-alert {
   border: 1px solid #40eebb;
   background-color:#73efcb;
+}
+
+.list-title {
+  text-align: center;
 }
 
 .table {
@@ -92,6 +191,7 @@ input, textarea, select, a {
 
 .tr {
   display:table-row;
+  font-weight: 300;
 }
 
 .td {
@@ -104,4 +204,23 @@ input, textarea, select, a {
 .task {
   width:300px;
   text-align: left;
+}
+
+.task > a {
+  color:#1dcdff;
+  text-decoration:none;
+}
+
+a {
+  color:#00c7ff;
+  text-decoration:none;
+  font-weight: 300;
+}
+
+.field_with_errors {
+  display: inline;
+}
+
+.list-image {
+  text-align: center;
 }
