--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,12 +1,12 @@
-<h2>Resend confirmation instructions</h2>
+<h2>Resend email confirmation</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <div><%= f.label :email %></div>
+  <div><%= f.email_field :email, class: "reg-form-field", autofocus: true %></div><br/>
 
-  <div><%= f.submit "Resend confirmation instructions" %></div>
+  <div><%= f.submit "Resend", class: 'reg-button' %></div>
 <% end %>
-
+<br/>
 <%= render "devise/shared/links" %>
