--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,13 @@
 <h2>Forgot your password?</h2>
-
+<p>Enter the email address associated with your account. You'll shortly receive an email with instructions for resetting your password.</p>
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <%= f.email_field :email, class: "reg-form-field", autofocus: true %></div><br/>
 
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div><%= f.submit "Reset", class: "reg-button" %></div>
 <% end %>
+<br/>
 
 <%= render "devise/shared/links" %>
