--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,39 @@
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
+<h3>Email and password information</h3>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
+  <%= f.email_field :email, class: "reg-form-field" %></div><br />
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "off" %></div>
+  <div><%= f.label :password, "New password" %> <br />
+    <%= f.password_field :password, class: "reg-form-field", autocomplete: "off", placeholder: "Leave blank if unchanged" %></div><br />
 
-  <div><%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
+    <%= f.password_field :password_confirmation, class: "reg-form-field", autocomplete: "off" %></div><br />
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "off" %></div>
+  <div><%= f.label :current_password %><br />
+    <%= f.password_field :current_password, class: "reg-form-field" , autocomplete: "off", placeholder: "Enter to confirm changes" %></div><br />
 
-  <div><%= f.submit "Update" %></div>
+  <div><%= f.submit "Update", class: "reg-button" %></div>
+<% end %>
+
+<h3>Personal information</h3>
+
+<%= form_for(current_user) do |f| %>
+  <div><%= f.label :name %><br/>
+  <%= f.text_field :name, class: "reg-form-field" %></div><br />
+
+  <%= f.submit "Update", class: 'reg-button' %>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "cancel-button" %></p>
 
 <%= link_to "Back", :back %>
