--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,11 @@
-<h1>List</h1>
+<h1>My List</h1>
 <% if @user.list %>
-  <p>
-    <%= link_to @list.name, single_list_path %>
-  <small><%= link_to "Delete", @list, method: :delete, data: { confirm: "Are you sure you want to delete this list?" } %></small>
+  <p class="list-image">
+    <%= link_to(single_list_path) do %>
+      <%= image_tag("/images/todo.png") %>
+    <% end %>
+  <br/>
+  <%= link_to "Delete", @list, method: :delete, data: { confirm: "Are you sure you want to delete this list?" } %>
 </p>
 <% else %>
 Create your to do list!
