--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,13 @@ body {
 }
 
 .home {
-  background-image: url('/assets/tickitoff.png');
+  background-image: url(image-path('tickitoff.png'));
+  background-repeat:no-repeat;
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 h1.home-head {
