--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,8 @@ body {
 }
 
 .home {
-  background-image: url(image-path('tickitoff.png'));
+  background-image: url('/assets/tickitoff.png');
+/*  background-image: url(asset-path('tickitoff.png'));*/
   background-repeat:no-repeat;
   background-attachment: fixed;
   -webkit-background-size: cover;
