Whenever gem on production

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
   <h1 class="home-head">tick it off</h1>
     <p class="home-text">
       Your personal, self-destructing to-do list.<br/>
-      If you haven't finished it by 7 days,<br/>
+      If you haven't finished a task in 7 days,<br/>
       you probably weren't going to.
     </p>
 
