--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
 <h2>Sign up</h2>
 
+<div class="border-box">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -17,5 +18,9 @@
 
   <div><%= f.submit "Sign up", class: "reg-button" %></div>
 <% end %>
+</div>
+
 <br />
-<%= render "devise/shared/links" %>
+<div class="box-links">
+  <%= render "devise/shared/links" %>
+</div>
