--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -21,7 +21,7 @@ body {
 }
 
 .home {
-  background-image: image-url('tickitoff.png');
+  background-image: image-url('bg.png');
   background-repeat:no-repeat;
   background-attachment: fixed;
   -webkit-background-size: cover;
@@ -76,7 +76,7 @@ input:-webkit-autofill {
 
 .reg-form-field {
   -webkit-box-shadow: rgba(255, 255, 255, 0.0470588) 0px 0px 0px 1px, rgba(0, 0, 0, 0.0980392) 0px 20px 20px -20px inset;
-  width:300px;
+  width:475px;
   height:40px;
   font-size:15px;
   font-family: 'Open Sans', sans-serif;
@@ -229,4 +229,16 @@ a {
 
 .list-image {
   text-align: center;
+}
+
+.border-box {
+  padding:30px 30px;
+  width:500px;
+  border:1px solid #e3e3e3;
+  margin:0 auto;
+}
+
+.box-links {
+  margin:0 auto;
+  width:500px;
 }
