--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
   <%= link_to "Delete", @list, method: :delete, data: { confirm: "Are you sure you want to delete this list?" } %>
 </p>
 <% else %>
-Create your to do list!
+Create your to-do list!
 <br/><br/>
 <div>
   <%= render partial: 'lists/form', locals: { list: @list } %>
