--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,11 @@
 
   <div class="user-info">
     <% if current_user %>
-    Hello <%= link_to (current_user.name || current_user.email), profile_path %>!<br> <%= link_to "Edit Profile", edit_user_registration_path %> || <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      <% @username == current_user.name %>
+      <% if current_user.name == "" %>
+        <% @username = current_user.email %>
+      <% end %>
+    Hello <%= link_to @username, profile_path %>!<br> <%= link_to "Edit Profile", edit_user_registration_path %> || <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
     <% else %>
     <%= link_to "Sign In", new_user_session_path %> or <%= link_to "Sign Up", new_user_registration_path %>
     <% end %>
