Display user name or email, increased font size

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,10 @@
 
   <div class="user-info">
     <% if current_user %>
-      <% @username == current_user.name %>
-      <% if current_user.name == "" %>
+      
+      <% unless current_user.name == "" %>
+        <% @username = current_user.name %>
+      <% else %>
         <% @username = current_user.email %>
       <% end %>
     Hello <%= link_to @username, profile_path %>!<br> <%= link_to "Edit Profile", edit_user_registration_path %> || <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
