--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -38,4 +38,4 @@
   <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "cancel-button" %></p>
 </div>
 </br>
-<%= link_to "Back", :back %>
+<%= link_to "Back", profile_path %>
