--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -1,4 +1,4 @@
 <%= form_for list do |f| %>
-  <%= f.text_field :name, autocomplete: "off", class: 'form-field', placeholder: 'Enter list name' %>
+  <%= f.text_field :name, autocomplete: "off", class: 'form-field list-form', placeholder: 'Enter list name' %>
   <%= f.submit 'Create', class: 'button' %>
 <% end %>
