--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,31 @@
-<h1>My List</h1>
-<% if @user.list %>
-  <p class="list-image">
-    <%= link_to(single_list_path) do %>
-      <%= image_tag("/images/todo.png") %>
+<h1>My Lists</h1>
+
+<% if @user.lists.count > 0 %>
+  <div class="all-lists">
+    <% @lists.each do |list| %>
+    <div class="list-image">
+      <%= link_to list_path(list) do %>
+        <%= image_tag("/images/todo.png") %>
+      <% end %>
+      <br/>
+      <div class="list-info"><%= content_tag :div, id: "list-#{list.id}" do %><%= list.name %><br/><% end %>
+        <%= link_to "✐", edit_list_path(list), remote: :true %>
+        <%= link_to "✖", list, method: :delete, data: { confirm: "Are you sure you want to delete this list?" } %>
+      </div>
+    </div>
     <% end %>
+  </div>
+  
+  Create another to-do list!
   <br/>
-  <%= link_to "Delete", @list, method: :delete, data: { confirm: "Are you sure you want to delete this list?" } %>
-</p>
+  <div>
+    <%= render partial: 'lists/form', locals: { list: @list } %>
+  </div>
+
 <% else %>
-Create your to-do list!
-<br/><br/>
-<div>
-  <%= render partial: 'lists/form', locals: { list: @list } %>
-</div>
+  Create your to-do list!
+  <br/><br/>
+  <div>
+    <%= render partial: 'lists/form', locals: { list: @list } %>
+  </div>
 <% end %>
